; ModuleID = '/home/carl/AnghaBench/8cc/extr_parse.c_make_pair.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_parse.c_make_pair.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @make_pair(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8**, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = call i8** @malloc(i32 16)
  store i8** %6, i8*** %5, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = load i8**, i8*** %5, align 8
  %9 = getelementptr inbounds i8*, i8** %8, i64 0
  store i8* %7, i8** %9, align 8
  %10 = load i8*, i8** %4, align 8
  %11 = load i8**, i8*** %5, align 8
  %12 = getelementptr inbounds i8*, i8** %11, i64 1
  store i8* %10, i8** %12, align 8
  %13 = load i8**, i8*** %5, align 8
  %14 = bitcast i8** %13 to i8*
  ret i8* %14
}

declare dso_local i8** @malloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
